# Avshrs_Switch_Array_PI

./: .clang-format  .gitignore  .gitignore   CMakeLists.txt  MCI_Satel_Listener  MCI_swich_array  MCP_Manager.cpp  MCP_Manager.h  MCP_Mosquitto.h  MCP_Settings.cpp  MCP_Settings.h  MCPdev.cpp  MCPdev.h  README.md  Settings_server.cpp  clang-format-all.sh  config.yaml  copy_and_compile.sh  main.cpp  model.drawio  socket_server.h  temp.cpp  test.py  vars.h
include/: MCP_Manager.h  MCP_Mosquitto.h  MCP_Mosquitto_satel.h  MCP_Settings.h  MCP_i2c.h  MCP_logger.h  MCP_rw_config.h  MCPdev.h  SatelIntegra.h  Settings_server.h  mqtt.h  socket_server.h  vars.h
old/: MCP_Settings.cpp  Settings_server.cpp  Settings_server.h  socket_server.cpp  socket_server.h
src/: MCP_Logger.cpp  MCP_Manager.cpp  MCP_Mosquitto.cpp  MCP_Settings.cpp  MCP_i2c.cpp  MCP_rw_config.cpp  MCPdev.cpp  SatelIntegra.cpp  Settings_server.cpp  main.cpp  mqtt.cpp  satelMain.cpp  socket_server.cpp
src_satel/: MCP_Mosquitto.cpp  MCP_Mosquitto_satel.cpp  SatelIntegra.cpp  satelMain.cpp
